fix #896